# python.zfr

./: .gitignore  LICENSE  Makefile  README.md  config.cfg  requirements.txt  setup.cfg  setup.py
docs/: README.md
src/zfr/: __init__.py  config.py  exception.py  utils.py
src/zfr/cli/: __init__.py  folder.py  plan.py
src/zfr/commands/: __init__.py  folder.py  plan.py
src/zfr/dataobjects/: __init__.py  cycle.py  folder.py  plan.py
src/zfr/managers/: __init__.py
src/zfr_nathonfowlie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
