[metadata]
name = zfr-nathonfowlie
version = 0.0.1
author = Nathon Fowlie
description = CLI utility to automate test case management using Zephyr Scale for Jira.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nathonfowlie/python-zfr
project_urls =
    Bug Tracker = https://github.com/nathonfowlie/python-zfr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    zfr-plan = zfr.cli.plan:cli
    zfr-folder = zfr.cli.folder:cli

[flake8]
max-line-length = 100
jobs = 8

